--- a/网站.md
+++ b/网站.md
@@ -1,4 +1,4 @@
-**网站**：
+**社区网站**：
 
 * [30secondsofcode](https://www.30secondsofcode.org/)
 
@@ -18,6 +18,45 @@
 
 * [infoQ](https://www.infoq.cn/)
 
+* [简书](https://www.jianshu.com/techareas/backend)
+
+* [segmentfault](https://segmentfault.com/)
+
+* [stackoverflow](https://stackoverflow.com/)
+
+* [掘金](https://juejin.cn/)
+
+* [博客园](https://www.cnblogs.com/)
+
+* [CSDN](https://www.csdn.net/)
+
+* [阿里云开发者社区](https://developer.aliyun.com/?spm=a2c6h.12873639.article-detail.1.7ee93715Yw7ecN)
+
+* [OSCHINA](https://www.oschina.net/)
+
+* [腾讯云开发者社区](https://cloud.tencent.com/developer)
+
+
+**个人网站**：
+
+* [吴师兄学算法](https://www.cxyxiaowu.com/)
+
+* [小林coding](https://xiaolincoding.com/)
+
+* [Smah-博客园](https://www.cnblogs.com/still-smile/)
+
+* [YeontuBlog](http://jyeontu.xyz/JYeontuBlog/#/home)
+
+* [伍迷-博客园](https://www.cnblogs.com/cj723/)
+
+* [极客兔兔](https://geektutu.com/)
+
+* [polarisxu](https://polarisxu.studygolang.com/)
+
+* [coderit666](https://github.com/coderit666)
+
+* [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
+
   
 
 **Golang**：
@@ -29,11 +68,13 @@
 **Markdown**：
 
 * [慕课教程](https://www.imooc.com/wiki/markdownlesson/markdownclassdiagram.html)
+
 * [ToolBox](https://juejin.cn/column/6992577025621884936)
+
 * [官方教程](https://markdown.com.cn/basic-syntax/links.html)
 
 
 
-算法：
+**算法**：
 
 * [十大经典排序算法](https://sort.hust.cc/)
