--- a/Tools/Goland/添加注释_插件.md
+++ b/Tools/Goland/添加注释_插件.md
@@ -53,6 +53,13 @@ Struct Field:
 
 Package:
 ```
+/**************************************************
+*FileName：${package_name}
+*Description：*
+*History：*
+*Author: luz
+*Data: ${date}
+**************************************************/
 
 ```
 
@@ -62,21 +69,30 @@ Other:
 ```
 
 **插件参数类型**
-   | Args                  | Desc                                                    |
-   | --------------------- | ------------------------------------------------------- |
-   | ${todo}               | Blank Placeholder                                       |
-   | ${receiver}           | function receiver name or type                          |
-   | ${params}             | function params name or type                            |
-   | ${return_types}       | function output name or type                            |
-   | ${function_name}      | function name                                           |
-   | ${param_name}         | function params name                                    |
-   | ${param_type}         | function params type                                    |
-   | ${param_name_type}    | function params name and type                           |
-   | ${receiver_name}      | function receiver name                                  |
-   | ${receiver_type}      | function receiver type                                  |
-   | ${receiver_name_type} | function receiver name and type                         |
-   | ${ret}                | function output name or type, equals to ${return_types} |
-   | ${ret_name}           | function output name                                    |
-   | ${ret_type}           | function output type                                    |
-   | ${ret_name_type}      | return name and type                                    |
-   | ${date}               | yyyy-MM-dd HH:mm:ss                                     |
+| Args                  | Desc                                                    |
+| --------------------- | ------------------------------------------------------- |
+| ${todo}               | Blank Placeholder                                       |
+| ${receiver}           | function receiver name or type                          |
+| ${params}             | function params name or type                            |
+| ${return_types}       | function output name or type                            |
+| ${function_name}      | function name                                           |
+| ${date}               | yyyy-MM-dd HH:mm:ss                                     |
+| ${todo}               | Blank Placeholder                                       |
+| ${receiver}           | function receiver name or type                          |
+| ${params}             | function params name or type                            |
+| ${return_types}       | function output name or type                            |
+| ${function_name}      | function name                                           |
+| ${param_name}         | function params name                                    |
+| ${param_type}         | function params type                                    |
+| ${param_name_type}    | function params name and type                           |
+| ${receiver_name}      | function receiver name                                  |
+| ${receiver_type}      | function receiver type                                  |
+| ${receiver_name_type} | function receiver name and type                         |
+| ${ret}                | function output name or type, equals to ${return_types} |
+| ${ret_name}           | function output name                                    |
+| ${ret_type}           | function output type                                    |
+| ${ret_name_type}      | return name and type                                    |
+| ${interface_name}     | Name of Interface                                       |
+| ${struct_name}        | Name of Struct                                          |
+| ${struct_field_name}  | Name of Struct Field                                    |
+| ${package_name}       | Name of Package                                         |
