--- a/Tools/Goland/添加注释_插件.md
+++ b/Tools/Goland/添加注释_插件.md
@@ -54,7 +54,7 @@ Struct Field:
 Package:
 ```
 /**************************************************
-*FileName：${package_name}
+*PackgaeName：${package_name}
 *Description：*
 *History：*
 *Author: luz
