--- a/Docker/网站.md
+++ b/Docker/网站.md
@@ -25,6 +25,7 @@ Docker中文资源：
 * Docker安装手册：http://www.docker.org.cn/book/install.html
 
 * 一小时Docker教程 ：https://blog.csphere.cn/archives/22
-Docker纸质书：http://www.docker.org.cn/dockershuji.html
+
+* Docker纸质书：http://www.docker.org.cn/dockershuji.html
 
 * DockerPPT：http://www.docker.org.cn/dockerppt.html
