--- a/Docker/安装.md
+++ b/Docker/安装.md
@@ -12,6 +12,12 @@ $ sudo docker info
 
 Docker需要用户具有sudo权限，为了避免每次命令都输入`sudo`，可以把用户加入Docker用户组([官方文档](https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user))。
 
->     1. 创建docker组：`sudo groupadd docker`
->     2. 添加用户到docker组中：`sudo usermod -aG docker $USER`
->     3. 注销，重新登录即可(如果Linux运行在虚拟机上,那么直接重启吧!!!官方说的)
+1. 创建docker组：
+```
+sudo groupadd docker
+```
+2. 添加用户到docker组中：
+```
+sudo usermod -aG docker $USER
+```
+4. 注销，重新登录即可(如果Linux运行在虚拟机上,那么直接重启吧!!!官方说的)
