--- a/Website/130个网站.md
+++ b/Website/130个网站.md
@@ -6,24 +6,24 @@
 * [简答题](http://www.jiandati.com/)
 * [网易公开课](https://open.163.com/ted/)
 * [网易云课堂](https://study.163.com/)
-* [中国大学MOOC](www.icourse163.org)
-* [哔哩哔哩弹幕网](www.bilibili.com)
-* [我要自学网](www.51zxw.net)
-* [知乎](www.zhihu.com)
-* [学堂在线](www.xuetangx.com)
-* [爱课程](www.icourses.cn)
+* [中国大学MOOC](https://www.icourse163.org)
+* [哔哩哔哩弹幕网](https://www.bilibili.com)
+* [我要自学网](https://www.51zxw.net)
+* [知乎](https://www.zhihu.com)
+* [学堂在线](https://www.xuetangx.com)
+* [爱课程](https://www.icourses.cn)
 * [猫咪论文](https://lunwen.im/)
-* [iData（论文搜索)](www.cn-ki.net)
+* [iData（论文搜索)](https://www.cn-ki.net)
 * [文泉考试](https://www.wqkaoshi.com)
 * [CSDN](https://www.csdn.net/)
 
 ## 找书籍
 
 * [书栈网（极力推荐)](https://www.bookstack.cn/)
-* [码农之家（计算机电子书下载)](www.xz577.com)
-* [鸠摩搜书](www.jiumodiary.com)
-* [云海电子图书馆](www.pdfbook.cn)
-* [周读（书籍搜索)](ireadweek.com)
+* [码农之家（计算机电子书下载)](https://www.xz577.com)
+* [鸠摩搜书](https://www.jiumodiary.com/)
+* [云海电子图书馆](https://www.pdfbook.cn)
+* [周读（书籍搜索)](https://ireadweek.com)
 * [知轩藏书](http://www.zxcs.me/)
 * [脚本之家电子书下载](https://www.jb51.net/books/)
 * [搜书VIP-电子书搜索](http://www.soshuvip.com/all.html)
@@ -58,11 +58,11 @@
 
 ## 资源搜索
 
-* [DogeDoge搜索引擎](www.dogedoge.com)
+* [DogeDoge搜索引擎](https://www.dogedoge.com)
 * [秘迹搜索](https://mijisou.com/)
 * [小白盘](https://www.xiaobaipan.com/)
-* [云盘精灵（资源搜索)](www.yunpanjingling.com)
-* [虫部落（资源搜索)](www.chongbuluo.com)
+* [云盘精灵（资源搜索)](https://www.yunpanjingling.com)
+* [虫部落（资源搜索)](https://www.chongbuluo.com)
 * [爱扒](https://www.zyboe.com/)
 
 ## 小工具
@@ -96,7 +96,7 @@
 * [聚BT](https://jubt.net/cn/index.html)
 * [精准云工具合集](https://jingzhunyun.com/)
 * [兔2工具合集](https://www.tool2.cn/)
-* [爱资料工具（在线实用工具集合)](www.toolnb.com)
+* [爱资料工具（在线实用工具集合)](https://www.toolnb.com)
 * [工具导航](https://hao.logosc.cn/)
 
 ## 看视频
@@ -118,7 +118,7 @@
 * [小图标下载](https://www.easyicon.net/)
 * [Flight Icon](https://www.flighticon.com/)
 * [第一字体转换器](http://www.diyiziti.com/)
-* [doyoudosh（平面设计)](www.doyoudo.com)
+* [doyoudosh（平面设计)](https://www.doyoudo.com)
 * [企业宣传视频在线制作](https://duomu.tv/)
 * [MAKE海报设计官网](http://maka.im/)
 * [一键海报神器](https://www.logosc.cn/photo/utm_source=hao.logosc.cn&utm_medium=referral)
@@ -126,7 +126,7 @@
 * [查字体网站](https://fonts.safe.360.cn/)
 * [爱给网（免费素材下载的网站，包括音效、配乐，3D、视频、游戏，平面、教程)](http://www.aigei.com/)
 * [在线视频剪辑](https://bilibili.clipchamp.com/editor)
-
+https://
 ## 搞文档
 
 * [即书（在线制作PPT)](https://www.keysuper.com/)
@@ -135,18 +135,18 @@
 * [PDF处理](https://www.pdfpai.com/)
 * [PDF处理](https://www.hipdf.cn/)
 * [图片压缩，PDF处理](https://docsmall.com/)
-* [腾讯文档（在线协作编辑和管理文档)](docs.qq.com)
-* [ProcessOn（在线协作制作结构图)](www.processon.com)
-* [iLovePDF（在线转换PDF利器)](www.ilovepdf.com)
+* [腾讯文档（在线协作编辑和管理文档)](https://docs.qq.com)
+* [ProcessOn（在线协作制作结构图)](https://www.processon.com)
+* [iLovePDF（在线转换PDF利器)](https://www.ilovepdf.com)
 * [PPT在线制作](https://www.woodo.cn/)
 * [PDF24工具（pdf处理工具)](https://tools.pdf24.org/en)
-* [IMGBOT（在线图片处理)](www.imgbot.ai)
-* [福昕云编辑（在线编辑PDF)](edit.foxitcloud.cn)
-* [TinyPNG（在线压缩图片)](tinypng.com)
-* [UZER.ME（在线使用各种大应用，在线使用CAD，MATLAB，Office三件套)](uzer.me)
+* [IMGBOT（在线图片处理)](https://www.imgbot.ai)
+* [福昕云编辑（在线编辑PDF)](https://edit.foxitcloud.cn)
+* [TinyPNG（在线压缩图片)](https://tinypng.com)
+* [UZER.ME（在线使用各种大应用，在线使用CAD，MATLAB，Office三件套)](https://uzer.me)
 * [优品PPT（模板下载)](http://www.ypppt.com/)
 * [第一PPT（模板下载)](http://www.1ppt.com/xiazai/)
-* [三顿PPT导航](sandunppt.com)
+* [三顿PPT导航](https://sandunppt.com)
 * [Excel函数表](https://support.office.com/zh-cn/office/excel-函数-按字母顺序-b3944572-255d-4efb-bb96-c6d90033e188)
 
 ## 找图片
