--- a/Opentrons/复杂命令.md
+++ b/Opentrons/复杂命令.md
@@ -17,19 +17,16 @@ def run(protocol: protocol_api.ProtocolContext):
     # The code used in the rest of the examples goes here
 ```
 
-**转移：**
-
+**转移**
 ![img](https://cdn.jsdelivr.net/gh/sfdsv/pic/img/202302132206280.png)
 
-**分发：**
-
+**分发**
 ![img](https://docs.opentrons.com/v2/_images/robot_distribute.png)
 
-**合并：**
+**合并**
+![images/robot_consolidate.png](https://cdn.jsdelivr.net/gh/sfdsv/pic/img/202302132209449.png)
 
-![_images/robot_consolidate.png](https://cdn.jsdelivr.net/gh/sfdsv/pic/img/202302132209449.png)
-
-## 转移
+## 转移液体
 
 从孔A1到孔B1转移100ul液体，使用P300单通道移液器，自动换新的tip头然后丢弃:
 
@@ -175,7 +172,7 @@ Dispensing 60.0 uL into well B3 in "1"
 Dropping tip well A1 in "12"
 ```
 
-## 分发和合并
+## 分发和合并液体
 
 分发和合并与转移类似，但存在特定用途。
 
@@ -374,7 +371,32 @@ Blowing out in well A1 in "12"
 Dropping tip well A1 in "12"
 ```
 
-## 复杂的液体操作参数
+## 操作序列
+
+复杂命令的参数控制行为。但是操作的序列不可变。
+
+1. tip逻辑
+
+2. 在源孔混匀
+
+3. 吸液+可能存在的处理体积
+
+4. 触摸tip
+
+5. 空气间隙
+
+6. 喷液
+
+7. 触摸tip
+
+   <----------重复以上步骤用于所有孔------------->
+
+8. 将处理体积喷进垃圾桶置空，如果存在
+9. 吹出
+
+注意，只有在`去除处理体积`后才会发生`吹出`。如果你想要在每次`喷液`后`吹出`，你不应该包含处理体积。
+
+## 液体操作参数
 
 ### new_tip
 
@@ -517,3 +539,50 @@ Dropping tip well A1 in "12"
 
 ### blow_out
 
+通过设置`blow_out=True`可以让每次喷液后都去垃圾桶执行吹出动作，为了让tip头内置空。
+
+```python
+pipette.transfer(
+    100,
+    plate['A1'],
+    plate['A2'],
+    blow_out=True)      # blow out droplets when tip is empty
+```
+
+将执行以下步骤：
+
+```python
+Transferring 100 from well A1 in "1" to well A2 in "1"
+Picking up tip well A1 in "2"
+Aspirating 100.0 uL from well A1 in "1" at 1 speed
+Dispensing 100.0 uL into well A2 in "1"
+Blowing out
+Dropping tip well A1 in "12"
+```
+
+The robot will automatically dispense any left over liquid that is not from using disposal_volume into the source well of your transfer function.
+
+机器人自动的将转移剩余的液体喷回转移函数的源孔。
+
+```python
+pipette.pick_up_tip()
+pipette.aspirate(10, plate['A1'])
+pipette.transfer(
+    100,
+    plate['A1'],
+    plate['A2'],
+    blow_out=True,   # blow out droplets into the source well (A1 of "plate")
+    new_tip='never')
+```
+
+### blowout_location
+
+### mix_before, mix_after
+
+### air_gap
+
+### disposal_volume
+
+在分发指令中，当使用同一个吸头喷多次的时候，建议在分发后吸额外的液体进行处理。
+
+这被增加的`disposal_volume`可以被设置作为一个可选参数。
