--- a/Opentrons/工作流程.md
+++ b/Opentrons/工作流程.md
@@ -54,6 +54,20 @@ print(format_runlog(runlog))
 
 使用`opentrons.simulate.format_runlog()`将日志变得可读。
 
+```python
+from opentrons.simulate import simulate, format_runlog
+
+# read the file
+protocol_file = open('/path/to/protocol.py')
+custom_labware_path = './custom_labware/'
+# simulate() the protocol, keeping the runlog
+runlog, _bundle = simulate(protocol_file, custom_labware_paths=[custom_labware_path])
+# print the runlog
+print(format_runlog(runlog))
+```
+
+`custom_labware_path`配置自定义的实验器具的路径。
+
 ## 配置和本地存储
 
 `Opentrons Python包`的配置和内部数据存储在用户目录下：`~/.opentrons`。
@@ -115,3 +129,13 @@ def run(protocol: protocol_api.ProtocolContext):
    2. 从平板的孔A1吸入100µL液体。
    3. 将100µL液体分配到平板的孔B1中。
    4. 把Tip扔到垃圾桶里。
+
+## 默认的实验器具
+
+[Opentrons Labware Library](https://labware.opentrons.com/)
+
+OT-2有一系列内部定义好的实验器具。
+
+## 自定义实验器具
+
+[Opentrons Labware Creator](
