--- a/Developer/C/C语言基础入门/指针.md
+++ b/Developer/C/C语言基础入门/指针.md
@@ -2,7 +2,7 @@
 
 ### 什么是指针？
 
-指针也就是内存地址，指针变量是用来存放内存地址的变量。就像其他变量或常量一样，必须在使用指针存储其他变量地址之前，对其进行声明。指针变量声明的一般形式：
+**指针也就是内存地址，指针变量是用来存放内存地址的变量**。就像其他变量或常量一样，必须在使用指针存储其他变量地址之前，对其进行声明。指针变量声明的一般形式：
 
 ```c
 type *var_name
@@ -16,7 +16,7 @@ type *var_name
 
 * 定义一个指针变量
 * 把变量地址赋值给指针
-* 访问指针变量中可用地址的值
+* 访问指针变量中可用地址的值*
 
 ```c
 #include <stdio.h>
@@ -47,6 +47,13 @@ ip 变量存储的地址: 0x7ffeeef168d8
 *ip 变量的值: 20
 ```
 
+#### 访问那个地址上的变量*
+
+* *是一个单目运算符,用来访问指针的值所表示的地址上的变量
+* 可以做右值也可以做左值
+  * `int k = *p;`（`*p`作为一个整体，就可以看做一个int）
+  * `*p=k+1;`
+
 ### C中的NULL指针
 
 赋值为NULL值的指针被称为空指针。NULL指针是一个定义在标准库中的值为零的常量。
@@ -60,3 +67,26 @@ if(ptr)     /* 如果 p 非空，则完成 */
 if(!ptr)    /* 如果 p 为空，则完成 */
 ```
 
+### 函数参数表里的数组
+
+* 传入函数参数表里的数组实际上是一个指针（数组的首地址）
+  * `sizeof(a)==sizeof(int*)`
+  * 但是可以用数组的运算符[]进行运算
+
+#### 数组参数
+
+以下四种函数原型是等价的：
+
+* `int sum(int *ar,int n);`
+* `int sum(int *,int);`
+* `int sum(int ar[],int n);`
+* `int sum(int [],int);`
+
+不是说它们的类型是等价的，而是它们在参数表中出现是等价的，作为函数原型，它们是等价的。
+
+### 数组变量是特殊的指针
+
+* 数组变量本身表达地址，所以
+  * `int a[10];int *p=a; //无需用&取地址`
+  * 但是数组的单元表达的是变量，需要用&取地址 
+  *  
