--- a/Developer/C/C语言基础入门/运算符.md
+++ b/Developer/C/C语言基础入门/运算符.md
@@ -90,3 +90,84 @@ a++ >= 1 && b-- > 2 ? a:b
 ### 在for中使用
 
 * `for(i=0,j=10;i<j;j++,j--)......`
+
+## 取地址运算符&
+
+* `scanf("%d",&i);`里的&
+* 获取变量的地址，它的操作数必须是变量
+  * `int i;printf("%x",&i);`
+* 地址的大小是否与int相同取决于编译器
+  * `int i;printf("%p",&i);`
+  * `printf("%lu\n",sizeof(int));printf("%lu\n",sizeof(&i));`
+
+* C语言内存模型堆栈分配的时候是自顶向下来分配的
+
+
+```c
+#include <stdio.h>
+
+int main(void) {
+    int i = 0;
+    int p;
+
+    printf("%p\n", &i);
+    printf("%p\n", &p);
+
+    p = (int) &i;
+
+    printf("0x%x\n", p);
+
+    printf("%lu\n", sizeof(int));
+    printf("%lu\n", sizeof(&i));
+
+    return 0;
+}
+```
+
+```c
+0x7fffee26ff58
+0x7fffee26ff54
+0xee26ff58
+4
+8
+```
+
+#### 不能取的地址
+
+* &不能对没有地址的东西取地址
+  * `&(a+b)`
+  * `&(a++)`
+  * `&(++a)`
+
+#### 可以取的地址
+
+* 变量的地址
+* 相邻的变量的地址
+* &的结果的sizeof
+* 数组地址
+* 数组单元的地址
+* 相邻的数组单元的地址
+* ......
+
+```c
+#include <stdio.h>
+
+int main(void) {
+    int a[10];
+
+    printf("%p\n", &a);
+    printf("%p\n", a);
+    printf("%p\n", &a[0]);
+    printf("%p\n", &a[1]);
+
+    return 0;
+}
+```
+
+```c
+0x7ffd29cabfd0
+0x7ffd29cabfd0
+0x7ffd29cabfd0
+0x7ffd29cabfd4
+```
+
