--- a/Developer/C/C语言基础入门/指针.md
+++ b/Developer/C/C语言基础入门/指针.md
@@ -89,4 +89,100 @@ if(!ptr)    /* 如果 p 为空，则完成 */
 * 数组变量本身表达地址，所以
   * `int a[10];int *p=a; //无需用&取地址`
   * 但是数组的单元表达的是变量，需要用&取地址 
-  *  
+  *  `a==&a[0]`
+* `[]`运算符可以对数组做，也可以对指针做：
+  * `p[0] <==> a[0]`
+
+* *运算符可以对指针做，也可以对数组做：
+  * `*a=25;`
+* 数组变量是`const`的指针，所以不能被赋值
+  * `int a[] <==> int * const a=...`
+
+```c
+int main(void) {
+    int a[] = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+    int b[] =a ; × //int b[] --> int * const b;const说明b是一个常数，不能被改变，初始化后就不能代表别的数组，是一个常量指针。
+    int *q = a; √
+}
+```
+
+## 指针与`const`
+
+指针可以是`const`，指针所指向的变量也可以是`const`。
+
+### 指针是`const`
+
+* 表示一旦得到了某个变量的地址，不能再指向其它变量
+
+```c
+#include <stdio.h>
+
+int main(void) {
+    int i;
+
+    int *const q = &i;//q是const
+    *q = 26;//OK
+    q++;//ERROR
+}
+```
+
+### 所指是`const`
+
+* 表示不能通过这个指针取修改那个变量（并不能使得那个变量成为`const`）
+
+```c
+#include <stdio.h>
+
+int main(void) {
+    int i;
+    int j;
+
+    const int *p = &i;
+    *p = 26;//ERROR (*p)是const
+    i = 26;//OK
+    p = &j;//OK
+}
+```
+
+```c
+int i;
+
+const int* p1 = &i;//*p不能变
+int const* p2 = &i;
+
+int *const p3 = &i;//p不能变
+
+//判断哪个被const了的标志是const在*的前面还是后面
+```
+
+### 转换
+
+* 总是可以把一个非`const`的值转换成`const`的
+
+```c
+void f(const int * x);
+int a=15;
+f(&a);//ok
+const int b=a;
+f(&b);//ok
+b=a+1;//Error
+```
+
+* 当要传递的参数的类型比地址大的时候，这是常用的手段。
+  * 既能用比较少的字节数传递值给参数
+  * 又能避免函数对外面的变量的修改
+
+### `const`数组
+
+* `const int a[]={1,2,3,4,5,6,};`
+* 数组变量已经是`const`的指针了，这里的`const`表明数组的每个单元都是`const int`
+* 所以必须通过初始化进行赋值
+
+### 保护数组值
+
+* 因为把数组传入函数时传递的是地址，所以函数内部可以修改数组的值
+* 为了保护数组不被函数破坏，可以设置参数为`const`
+  * `int sum(const int a[],int length);`
+
+## 指针运算
+
