--- a/Developer/C/C语言基础入门/指针.md
+++ b/Developer/C/C语言基础入门/指针.md
@@ -1,71 +1,11 @@
 # 指针
 
-### 什么是指针？
-
-**指针也就是内存地址，指针变量是用来存放内存地址的变量**。就像其他变量或常量一样，必须在使用指针存储其他变量地址之前，对其进行声明。指针变量声明的一般形式：
-
-```c
-type *var_name
-```
-
-`type`是指针的基类型，必须是一个有效的C数据类型；
-
-`var_name`是指针变量的名称；
-
-### 如何使用指针？
-
-* 定义一个指针变量
-* 把变量地址赋值给指针
-* 访问指针变量中可用地址的值*
-
-```c
-#include <stdio.h>
-
-int main ()
-{
-    int var = 20;   /* 实际变量的声明 此时的 VAR 这个变量是存在某个地址的，地址对应某个内存单元，该单元中存储了数据20 */
-    int *ip;         /* 指针变量的声明 定义了一个指针 即一个内存单元的地址变量 */
-
-    ip = &var;      /* 在指针变量中存储 var 的地址 就是将地址值赋值给指针这个变量*/
-
-    /* 在指针变量中存储的地址 利用&符号直接输出了var所存储的数据的内存单元的地址*/
-    printf("Address of var variable: %p\n", &var );
-    
-    /* 在指针变量中存储的地址 ip代表的是这个赋值到的地址的值 所以输出的是地址值 */
-    printf("Address stored in ip variable: %p\n", ip );
-    
-    /* 使用指针访问值 *ip代表的是定义到这个内存单元之后，内存单元中所存储的数据的值也就是将20赋值给var中20这个值 */
-    printf("Value of *ip variable: %d\n", *ip );
-
-    return 0;
-}
-```
-
-```
-var 变量的地址: 0x7ffeeef168d8
-ip 变量存储的地址: 0x7ffeeef168d8
-*ip 变量的值: 20
-```
-
 #### 访问那个地址上的变量*
 
 * *是一个单目运算符,用来访问指针的值所表示的地址上的变量
 * 可以做右值也可以做左值
   * `int k = *p;`（`*p`作为一个整体，就可以看做一个int）
   * `*p=k+1;`
-
-### C中的NULL指针
-
-赋值为NULL值的指针被称为空指针。NULL指针是一个定义在标准库中的值为零的常量。
-
-所有指针在创建时都要初始化，如果不知道他指向什么就将 0 赋值给他。**必须初始化指针，没有被初始化的指针被称为失控指针(野指针）**。
-
-检查一个空指针，可以使用if语句：
-
-```c
-if(ptr)     /* 如果 p 非空，则完成 */
-if(!ptr)    /* 如果 p 为空，则完成 */
-```
 
 ### 函数参数表里的数组
 
@@ -185,4 +125,98 @@ b=a+1;//Error
   * `int sum(const int a[],int length);`
 
 ## 指针运算
+
+* `p+1`至指的是内存中加`sizeof(int)`字节
+
+### 指针比较
+
+* 比较运算符可以对指针做
+* 比较它们在内存中的地址
+* 数组中的单元的地址肯定是线性递增的
+
+### 0地址
+
+* 内存中有0地址，但0地址通常是个不能随便碰的地址
+* 所以你的指针不应该具有0值
+* 因此可以用0地址来表示特殊的事情：
+  * 返回的指针是无效的
+  * 指针没有被真正初始化（先初始化为0）
+* NULL是一个预定定义的符号，表示0地址
+  * 有的编译器不愿意你用0来表示0地址
+
+### 指针的类型
+
+* 无论执行什么类型，所有指针的大小都是一样的，都是地址
+* 但是执行不能类型的指针不能直接互相赋值
+* 这是为了避免用错指针
+
+### 指针的类型转换
+
+* `void`表示不知道指向什么东西的指针
+  * 计算时与char*相同（但不相通）
+* 指针也可以转换类型
+  * `int *p=&i;void *q=(void*)p;`
+* 这并没有改变p所指的变量的类型，而是让后人用不同的眼光通过p看它所指的变量
+  * 我不再当你是int啦，我认为你就是个`void`
+
+### 用指针来做什么
+
+* 需要传入较大数据时用作参数
+* 传入数组后对数组做操作
+* 函数返回不止一个结果
+  * 需要用函数来修改不止一个变量，比如swap
+* 动态申请内存时
+
+## 动态内存分配
+
+* `int *a=(int*)malloc(n*sizeof(int));`
+  * 向`malloc`申请的空间的大小是以字节为单位的
+  * 返回的类型是`void*`，需要类型转换为自己需要的类型
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(void) {
+    int number;
+    int *a;
+    int i;
+    printf("输入数量: ");
+    scanf("%d", &number);
+    // int a[number];
+    a = (int *) malloc(number * sizeof(int));
+    for (i = 0; i < number; i++) {
+        printf("输入第%d个数: ", i + 1);
+        scanf("%d", &a[i]);
+    }
+    for (i = number - 1; i >= 0; i--) {
+        printf("%d ", a[i]);
+    }
+    free(a);
+    return 0;
+}
+```
+
+### 没空间了？
+
+* 如果申请失败则返回0，或者叫做NULL
+* 你的系统能给多大的空间：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(void) {
+    void *p;
+    int cnt = 0;
+    while ((p = malloc(100 * 1024 * 1024))) {
+        cnt++;
+    }
+    printf("分配了%d00MB的空间\n", cnt);
+    free(p);
+    return 0;
+}
+```
+
+执行程序运行时被杀死。
 
