--- a/Developer/C/C语言基础入门/整数.md
+++ b/Developer/C/C语言基础入门/整数.md
@@ -25,5 +25,11 @@
 
 #### 寄存器
 
+### 整数的输入输出
 
+* 只有两种形式：int或long long
+  * `%d`：`int`
+  * `%u`：`unsigned`
+  * `%ld`：`long long`
+  * `%lu`：`unsigned long long`
 
