--- a/Developer/C/C语言基础入门/简介.md
+++ b/Developer/C/C语言基础入门/简介.md
@@ -1,12 +1,13 @@
-## P1-C语言简史
+## C语言简史
 
-## P2-计算机与编程语言
+## 计算机与编程语言
 
 ### 计算机如何解决问题
 
 ![image-20230426220709427](.assets/2023年4月26日/image-20230426220709427.png)
 
 ### 计算机语言
+
 ![image-20230426220814042](.assets/2023年4月26日/image-20230426220814042.png)
 
 ![image-20230426224559715](.assets/2023年4月26日/image-20230426224559715.png)
@@ -17,7 +18,7 @@
 * 计算机做的所有的事情都叫做计算
 * 计算的步骤就是算法
 
-## P3-计算机的思维方式
+## 计算机的思维方式
 
 ### 计算机的思维
 
